# football-analysis

./: README.md
ai/: .env.example  .gitignore  README.md  pyproject.toml
ai/app/interface/: yolo_interface.py
ai/app/training/: football_training_yolo.ipynb
ai/tests/: conftest.py
backend/: Dockerfile  README.md  pyproject.toml
frontend/: Dockerfile  package.json
