[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Lei Niu <lei.niu.ny@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
alembic = "^1.13.1"
faker = "^25.6.0"
ultralytics = "^8.3.158"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^7.4.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
